[package]
name = "dylibso-observe-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wasmtime = {version = "9.0.3"}
wasmtime-wasi = {version = "9.0.3"}
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
rand = "0"
modsurfer-demangle = { git = "https://github.com/dylibso/modsurfer" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_tuple = "0"
ureq = "2"
url = "2"
wasmparser = "0.107.0"
