[package]
name = "dylibso-observe-sdk"
version = "0.1.0"
edition = "2021"

[lib]
# not testing docs because the prost generated structs fail
doctest = false

[dependencies]
anyhow = "1"
wasmtime = "8.0.0"
wasmtime-wasi = "8.0.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
rand = "0"
modsurfer-demangle = { git = "https://github.com/dylibso/modsurfer" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_tuple = "0"
ureq = "2"
url = "2"
wasmparser = "0.107.0"
prost = "0.11.9"

[build-dependencies]
prost-build = { version = "0.11.9" }
