[package]
name = "component-instr-reactor"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "example:component-instr-reactor"

[package.metadata.component.target]
path = "wit"
world = "component-instr-reactor"

[package.metadata.component.target.dependencies]
"dylibso:observe" = { path = "../../wit/observe.wasm" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
log = "0.4.20"
observe_api = { path = "../../observe-api/rust" }
