[package]
name = "component-instr-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
log = "0.4.20"
observe_api = { path = "../../observe-api/rust" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:component-instr-component"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"dylibso:observe" = { path = "../../wit/observe.wasm" }
