[package]
name = "iota"
version = "0.1.0"
edition = "2021"


[workspace]


[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["multipart"] }
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
wasi-common = ">= 17.0.0, < 18.0.0"
wasmtime = ">= 17.0.0, < 18.0.0"
wasmtime-wasi = ">= 17.0.0, < 18.0.0"
dylibso-observe-sdk = { path = "../../rust" }
futures-util = "0.3.28"
